@@ -36,20 +36,16 @@ import com.mojang.blaze3d.vertex.Tesselator;
 import me.mmmjjkx.titlechanger.Constants;
 import me.mmmjjkx.titlechanger.enums.Heading;
 import me.mmmjjkx.titlechanger.neoforge.TitleChangerNeoForge;
-import me.mmmjjkx.titlechanger.neoforge.config.TCResourceSettings;
 import me.mmmjjkx.titlechanger.neoforge.utils.ComponentUtils;
-import me.shedaniel.autoconfig.AutoConfig;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.components.Button;
 import net.minecraft.client.gui.narration.NarrationElementOutput;
-import net.minecraft.client.gui.screens.LanguageSelectScreen;
 import net.minecraft.client.gui.screens.Screen;
-import net.minecraft.client.gui.screens.TitleScreen;
+import net.minecraft.client.gui.screens.options.LanguageSelectScreen;
 import net.minecraft.locale.Language;
 import net.minecraft.network.chat.*;
 import net.minecraft.util.FormattedCharSequence;
-import net.neoforged.fml.loading.FMLPaths;
 import net.neoforged.neoforge.client.gui.widget.ScrollPanel;
 import net.neoforged.neoforge.common.CommonHooks;
 import org.apache.commons.lang3.StringUtils;
@@ -109,10 +105,12 @@ public class LaunchScreen extends Screen {
 
     @Override
     public void render(final @NotNull GuiGraphics guiGraphics, final int mouseX, final int mouseY, final float partialTicks) {
-        this.renderDirtBackground(guiGraphics);
+        renderBackground(guiGraphics, mouseX, mouseY, partialTicks);
 
         this.scrollableTextPanel.setText(this.text.get());
         this.scrollableTextPanel.render(guiGraphics, mouseX, mouseY, partialTicks);
+
+        super.render(guiGraphics, mouseX, mouseY, partialTicks);
 
         PoseStack pose = guiGraphics.pose();
         pose.pushPose();
@@ -125,8 +123,6 @@ public class LaunchScreen extends Screen {
                 true
         );
         pose.popPose();
-
-        super.render(guiGraphics, mouseX, mouseY, partialTicks);
     }
 
     public class ScrollableTextPanel extends ScrollPanel {
@@ -137,37 +133,6 @@ public class LaunchScreen extends Screen {
             super(mcInstance, width, height, top, left);
         }
 
-        //Compatibility
-        public boolean mouseScrolled(double d, double e, double f) {
-            if (f != 0) {
-                this.scrollDistance += (float) (-f * getScrollAmount());
-                applyScrollLimits();
-                return true;
-            }
-            return false;
-        }
-
-        private int getMaxScroll() {
-            return this.getContentHeight() - (this.height - this.border);
-        }
-
-        private void applyScrollLimits() {
-            int max = getMaxScroll();
-
-            if (max < 0) {
-                max /= 2;
-            }
-
-            if (this.scrollDistance < 0.0F) {
-                this.scrollDistance = 0.0F;
-            }
-
-            if (this.scrollDistance > max) {
-                this.scrollDistance = max;
-            }
-        }
-        //
-
         public void setText(final List<String> lines) {
             this.lines = wordWrapAndFormat(lines);
         }
@@ -177,7 +142,6 @@ public class LaunchScreen extends Screen {
             return (lines.size() * font.lineHeight) + font.lineHeight;
         }
 
-        @Override
         protected void drawPanel(@NotNull GuiGraphics guiGraphics, int entryRight, int relativeY, @NotNull Tesselator tesselator, int mouseX, int mouseY) {
             for (final Pair<Heading, ComponentUtils.LineStyles> line : lines) {
                 if (line != null) {
@@ -262,7 +226,7 @@ public class LaunchScreen extends Screen {
 
             // if the last line isn't a heading, add a single line at the end of the panel for
             // aesthetical (looks nicer) and functional reasons (hard to click links on last line otherwise)
-            if (resized.get(resized.size() - 1).first == Heading.NONE) {
+            if (resized.getLast().first == Heading.NONE) {
                 resized.add(Pair.of(Heading.NONE, ComponentUtils.getLine(Component.literal(" ").getVisualOrderText())));
             }
 
